--- a/views/mixins/_storeCard.pug
+++ b/views/mixins/_storeCard.pug
@@ -2,6 +2,14 @@ mixin storeCard(store={})
   .store
     .store__hero
       .store__actions
+        if user 
+          .store__action.store__action--heart
+            form.heart(method="POST" action=`/api/stores/${store._id}/heart` )
+              - const heartsList = user.hearts.map(obj => obj.toString())
+              //- pre= h.dump(heartsList)
+              - const heartClass = heartsList.includes(store._id.toString()) ? 'heart__button--hearted' : ''
+              button.heart__button(type="submit" name='heart' class=heartClass)
+                != h.icon('heart')
         if user && store.author.equals(user._id) 
           .store__action.store__action--edit
             a(href=`/stores/${store._id}/edit`)
