--- a/views/store.pug
+++ b/views/store.pug
@@ -1,5 +1,9 @@
 extends layout
 
+include mixins/_reviewStore
+include mixins/_review
+include mixins/_pagination
+
 block content
   .single
     .single__hero
@@ -9,9 +13,19 @@ block content
   .single__details.inner
     img.single__map(src=h.staticMap(store.location.coordinates))
     p.single__location= store.location.address
+    p= store.description
     if store.tags
       ul.tags
         each tag in store.tags
           li.tag
             a.tag__link(href=`/tags/${tag}`)
               span.tag__text #{tag}
+    if user 
+      +reviewStore(store)
+
+    if store.reviews
+      .reviews
+        each review in store.reviews
+          .review
+            +review(review)
+  +pagination(page, pages, count)
